fixed bug on tablet

--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -22,6 +22,12 @@ html,body {
   left: 0;
 }
 
+.md-dialog-container {
+  height: 100% !important;
+  position: fixed !important;
+  top: 0px !important;
+}
+
 #home-container{
   padding: 60px;
   display: flex;
